Правки для главной, новости, автора

--- a/author.html
+++ b/author.html
@@ -219,7 +219,10 @@
 						<div class="item">
 							<img src="images/author/7.jpg">
 						</div>
-						<a href="#" class="last"></a>
+						<div class="item goto">
+							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+						<!-- <a href="#" class="last"></a> -->
 					</div>
 				</div>	
 				<div class="project-item">
@@ -239,7 +242,10 @@
 						<div class="item">
 							<img src="images/author/7.jpg">
 						</div>
-						<a href="#" class="item last"></a>
+						<div class="item goto">
+							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+						<!-- <a href="#" class="item last"></a> -->
 					</div>
 				</div>
 				<div class="project-item">
@@ -274,7 +280,10 @@
 						<div class="item">
 							<img src="images/author/7.jpg">
 						</div>
-						<a href="#" class="item last"></a>
+						<div class="item goto">
+							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+						<!-- <a href="#" class="item last"></a> -->
 					</div>
 				</div>
 				<div class="project-item">
@@ -300,7 +309,10 @@
 						<div class="item">
 							<img src="images/author/7.jpg">
 						</div>
-						<a href="#" class="item last"></a>
+						<div class="item goto">
+							<a href="#">Go to the<br>project<i class="fa fa-arrow-right" aria-hidden="true"></i></a>
+						</div>
+						<!-- <a href="#" class="item last"></a> -->
 					</div>
 				</div>
 			</section>
