--- a/news.html
+++ b/news.html
@@ -99,71 +99,6 @@
 
 			<!-- NEWS-SNIP -->
 			<section class="panel news row 0% grid">
-				<div class="6u 12u$(xsmall) news-snip hor-image exhibition">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="news-item.html" title="Read" class="image fit">
-						<img src="images/news/1.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="news-item.html" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip exhibition" data-wow-delay="0.25s">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/2.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u 12u$(xsmall) news-snip exhibition">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/3.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip hor-image fairs artists" data-wow-delay="0.15s">
-					<span class="news-snip-last">LAST NEWS</span>
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/4.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
-					</div>
-				</div>
-
 				<!-- NEWS-BANNER -->
 				<banner class="12u$ news-snip fit fairs booklet">
 					<a href="" title="Read" class="image fit">
@@ -181,68 +116,134 @@
 					</div>
 				</banner>
 
-				<div class="6u 12u$(xsmall) news-snip hor-image fairs booklet">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/6.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+				<div class="12$ salvattore-2col" data-columns>
+					<div class="item exhibition">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="news-item.html" title="Read" class="image fit">
+							<img src="images/news/1.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="news-item.html" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip artists" data-wow-delay="0.2s">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/7.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item exhibition" data-wow-delay="0.25s">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/2.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u 12u$(xsmall) news-snip booklet">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/8.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item exhibition">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/3.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
-				</div>
-				<div class="6u$ 12u$(xsmall) news-snip hor-image exhibition artists" data-wow-delay="0.15s">
-					<a href="" title="Read" class="image fit">
-						<img src="images/news/9.png">
-					</a>
-					<div class="news-snip-content">
-						<ul class="news-snip-tags">
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-							<li><a href="">EXHIBITION</a></li>
-						</ul>
-						<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
-						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
-						<span class="news-snip-date">08.08.2016</span>
+					<div class="item artists" data-wow-delay="0.15s">
+						<span class="news-snip-last">LAST NEWS</span>
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/4.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item fairs booklet">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/6.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item artists" data-wow-delay="0.2s">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/7.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item booklet">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/8.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
+					</div>
+					<div class="item exhibition artists" data-wow-delay="0.15s">
+						<a href="" title="Read" class="image fit">
+							<img src="images/news/9.png">
+						</a>
+						<div class="news-snip-content">
+							<ul class="news-snip-tags">
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+								<li><a href="">EXHIBITION</a></li>
+							</ul>
+							<h4><a href="" title="Read">ARTISTS OF ANNA NOVA<br>IN STREET ART MUSEUM</a></h4>
+							<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
+							<span class="news-snip-date">08.08.2016</span>
+						</div>
 					</div>
 				</div>
 			</section>
-			<div class="action 12u align-center news-more"><a class="button special">VIEW MORE</a></div>
+			<div class="action 12u$ align-center news-more"><a class="button special">VIEW MORE</a></div>
 		</div>
 		<hr class="trans" />
 
@@ -300,6 +301,9 @@
 		<script src="assets/js/scrollmagic/plugins/animation.velocity.min.js"></script>
 		<script src="assets/js/scrollmagic/plugins/debug.addIndicators.min.js"></script>
 		<script src="assets/js/scrollmagic/plugins/jquery.scrollmagic.min.js"></script>
+
+		<!-- SALVATORE -->
+		<script src="assets/js/salvattore/salvattore.js"></script>
 
 		<!-- WOWJS -->
 		<script src="assets/js/wowjs/wow.min.js"></script>
