--- a/project.html
+++ b/project.html
@@ -183,13 +183,13 @@
 				<a class="item" data-w="237" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/1.jpg">
 				</a>
-				<a class="item" data-w="199" data-h="299">
+				<a class="item" data-w="199" data-h="299" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/2.jpg">
 				</a>
-				<a class="item" data-w="240" data-h="300">
+				<a class="item" data-w="240" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/3.jpg">
 				</a>
-				<a class="item" data-w="378" data-h="300">
+				<a class="item" data-w="378" data-h="300" data-fancybox data-src="#project1" href="javascript://">
 					<img src="images/author/5.jpg">
 				</a>
 			</section>
@@ -298,13 +298,15 @@
 			<div class="project-description">
 				<div class="title">Сказка о мертвой царевне и о семи богатырях</div>
 				<a href="#" class="author">Юлдуз Бахтиозина</a>
-				<div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
-				<div class="project-name">Проект: <a href="#">Russ land</a></div>
-				<ul class="project-social">
-					<li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
-					<li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
-					<li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
-				</ul>
+				<div class="expand">
+					<div class="info">Фотография, пленка, цифровая печать 1/7 , 100х120 мм 2014</div>
+					<div class="project-name">Проект: <a href="#">Russ land</a></div>
+					<ul class="project-social">
+						<li class="vk"><a href="https://vk.com/annanovagallery"></a></li>
+						<li class="fb"><a href="https://www.facebook.com/annanova.artgallery/"></a></li>
+						<li class="telegram"><a href="https://t.me/annanovagallery"></a></li>
+					</ul>
+				</div>
 			</div>
 		</div>
 		<div class="control-btn prev">
