isotope, стили проекта, работы

--- a/author.html
+++ b/author.html
@@ -188,13 +188,14 @@
 <!-- PROJECTS -->
 			<section class="b-projects" id="projects">
 				<div class="project-item">
-					<div class="type">Project</div>
 					<div class="mobile-headline">
+						<div class="type">Project</div>
 						<div class="title">RUSS LAND</div>
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="project-row owl-carousel">
 						<div class="item headline">
+							<div class="type">Project</div>
 							<div class="title">RUSS LAND</div>
 							<div class="date">28.04 - 29.08.2017</div>
 						</div>
@@ -226,13 +227,14 @@
 					</div>
 				</div>	
 				<div class="project-item">
-					<div class="type">Group Project</div>
 					<div class="mobile-headline">
+						<div class="type">Group Project</div>
 						<div class="title">Conjured life</div>
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="project-row owl-carousel">
 						<div class="item headline">
+							<div class="type">Group Project</div>
 							<div class="title">Conjured life</div>
 							<div class="date">28.04 - 29.08.2017</div>
 						</div>
@@ -249,13 +251,14 @@
 					</div>
 				</div>
 				<div class="project-item">
-					<div class="type">Project</div>
 					<div class="mobile-headline">
+						<div class="type">Project</div>
 						<div class="title">RUSS LAND</div>
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="project-row owl-carousel">
 						<div class="item headline">
+							<div class="type">Project</div>
 							<div class="title">RUSS LAND</div>
 							<div class="date">28.04 - 29.08.2017</div>
 						</div>
@@ -287,13 +290,14 @@
 					</div>
 				</div>
 				<div class="project-item">
-					<div class="type">Group Project</div>
 					<div class="mobile-headline">
+						<div class="type">Group Project</div>
 						<div class="title">Conjured life</div>
 						<div class="date">28.04 - 29.08.2017</div>
 					</div>
 					<div class="project-row owl-carousel">
 						<div class="item headline">
+							<div class="type">Group Project</div>
 							<div class="title">Conjured life</div>
 							<div class="date">28.04 - 29.08.2017</div>
 						</div>
@@ -330,8 +334,8 @@
 				</ul>
 			</div>
 
-			<section class="panel news salvattore grid" data-columns>
-				<div class="item exhibition">
+			<section class="panel news row isotope-grid">
+				<div class="item 4u 6u(small) 12u(xsmall) exhibition">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/7.png">
 					</a>
@@ -345,7 +349,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item fairs">
+				<div class="item 4u 6u$(small) 12u(xsmall) fairs">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
@@ -359,7 +363,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item artists">
+				<div class="item 4u$ 6u(small) 12u(xsmall) artists">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
 					</a>
@@ -373,7 +377,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item booklet">
+				<div class="item 4u 6u$(small) 12u(xsmall) booklet">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/6.png">
 					</a>
@@ -387,7 +391,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item booklet">
+				<div class="item 4u 6u(small) 12u(xsmall) booklet">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/3.png">
 					</a>
@@ -401,7 +405,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item">
+				<div class="item 4u$ 6u$(small) 12u(xsmall)">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/9.png">
 					</a>
@@ -415,7 +419,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item fairs">
+				<div class="item 4u 6u(small) 12u(xsmall) fairs">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/2.png">
 					</a>
@@ -429,7 +433,7 @@
 						<p>Artists of anna nova gallery in street art museum Аrtists of ANNA NOVA Gallery in street art museum. Аrtists of ANNA NOVA</p>
 					</div>
 				</div>
-				<div class="item exhibition">
+				<div class="item 4u 6u$(small) 12u(xsmall) exhibition">
 					<a href="" title="Read" class="image fit">
 						<img src="images/news/1.png">
 					</a>
