Стили по странице артистов + стили для буклета

--- a/artists.html
+++ b/artists.html
@@ -99,20 +99,20 @@
 					<li><a href="ROST.html">ROSTAN TAVASIEV</a></li>
 					<li><a href="UB.html">ULDUS BAKHTIOZINA</a></li>
 					<li><a href="VLADK.html">VLAD KULKOV</a></li>
-					<li><a>DAVID TER-OGANYAN</a></li>
-					<li><a>DENIS PATRAKEEV</a></li>
-					<li><a>IVAN PLUSCH</a></li>
-					<li><a>IGOR SHUKLIN</a></li>
-					<li><a>ILYA GRISHAEV</a></li>
-					<li><a>STAS BAGS</a></li>
-					<li><a>JURY ALEXANDROV</a></li>
-					<li><a>IRINA DROZD</a></li>
-					<li><a>MAXIM SVISHEV</a></li>
-					<li><a>MARYA DMITRIEVA</a></li>
-					<li><a>NADEZDA ANFAKLOVA</a></li>
-					<li><a>PAVEL BRAT</a></li>
-					<li><a>PETR SHVETSOV</a></li>
-					<li><a>HAIM SOKOL</a></li>
+					<li><a href="ALJOSCHA.html">DAVID TER-OGANYAN</a></li>
+					<li><a href="ALEXD.html">DENIS PATRAKEEV</a></li>
+					<li><a href="ANAP.html">IVAN PLUSCH</a></li>
+					<li><a href="ANDK.html">IGOR SHUKLIN</a></li>
+					<li><a href="ALK.html">ILYA GRISHAEV</a></li>
+					<li><a href="BORK.html">STAS BAGS</a></li>
+					<li><a href="ROST.html">JURY ALEXANDROV</a></li>
+					<li><a href="UB.html">IRINA DROZD</a></li>
+					<li><a href="VLADK.html">MAXIM SVISHEV</a></li>
+					<li><a href="ALJOSCHA.html">MARYA DMITRIEVA</a></li>
+					<li><a href="ALEXD.html">NADEZDA ANFAKLOVA</a></li>
+					<li><a href="ANAP.html">PAVEL BRAT</a></li>
+					<li><a href="ANDK.html">PETR SHVETSOV</a></li>
+					<li><a href="ALK.html">HAIM SOKOL</a></li>
 				</ul>
 			</section>
 		</div>
