Стили для страницы работ, проекта

--- a/author.html
+++ b/author.html
@@ -448,7 +448,7 @@
 					</div>
 				</div>
 			</section>
-			<div class="action 12u align-center news-more"><a class="button special">VIEW MORE</a></div>
+			<!-- <div class="action 12u align-center news-more"><a class="button special">VIEW MORE</a></div> -->
 
 			<hr class="trans" />
 
